Add logging and refactor email templates for user status notifications

--- a/common/templates/user_status.html
+++ b/common/templates/user_status.html
@@ -4,8 +4,7 @@
 Hi {{email}}
 {% endblock heading %}
 
-
-{% ifequal 'activated' message %}
+{% if message == 'activated' %}
 {% block content_body %}
 You account has been activated by {{status_changed_user}}. You can login to your account and access all the features of
 Django CRM.
@@ -18,7 +17,6 @@ Django CRM.
 </div>
 {% endif %}
 {% endblock button_link %}
-
 {% else %}
 {% block content_body %}
 You account has been deactivated by {{status_changed_user}}. You will receive an email if your account has been
@@ -27,20 +25,9 @@ activated.
 {% block extra_content %}
 Please contact your admin if you have any queries.
 {% endblock extra_content %}
-{% endifequal %}
-
+{% endif %}
 
 {% comment %}
 
-
-{% ifequal 'deactivated' message  %}
-{% block content_body %}
-You account has been deactivated by {{status_changed_user}}. You will receive an email if your account has been
-activated.
-{% endblock content_body %}
-{% block extra_content %}
-Please contact your admin if you have any queries.
-{% endblock extra_content %}
-{% endifequal %}
 
 {% endcomment %}
