--- a/common/templates/user_status_deactivate.html
+++ b/common/templates/user_status_deactivate.html
@@ -4,7 +4,7 @@
 Hi {{email}}
 {% endblock heading %}
 
-{% ifequal 'deactivated' message  %}
+{% if message == 'deactivated' %}
 {% block content_body %}
 You account has been deactivated by {{status_changed_user}}. You will receive an email if your account has been
 activated.
@@ -12,4 +12,4 @@ activated.
 {% block extra_content %}
 Please contact your admin if you have any queries.
 {% endblock extra_content %}
-{% endifequal %}
+{% endif %}
