--- a/common/templates/user_status_in.html
+++ b/common/templates/user_status_in.html
@@ -1,29 +1,38 @@
 {% extends 'root_email_template_new.html' %}
 
 {% block heading %}
-Hi {{user_email}}
+<span style="font-size: 36px; color: #2f5375; font-weight: 600;">Welcome to Bottle CRM!</span><br>
+<span style="font-size: 20px; color: #03759a; font-weight: 400;">Hi {{user_email}}</span>
 {% endblock heading %}
 
 {% block content_body %}
-Thanks for creating an account in Bottle CRM. Please click on the below link to activate your account.
+<p style="font-size: 18px; color: #333; margin: 24px 0 8px 0;">
+  An account has been created for you in <b>Bottle CRM</b> by your administrator.<br>
+  To get started, please verify your email address and set your password by clicking the button below.
+</p>
 {% endblock content_body %}
 
 {% block button_link %}
 <a href="{{complete_url}}"
-  style="display: inline-block; background: #2dc24d; font-size: 20px;font-weight: 500;color:#fff;width: 255px;text-align: center;padding: 18px 0;border-radius:4px;text-decoration: none;">
-  Verify Your Email</a>
+  style="display: inline-block; background: #2dc24d; font-size: 20px; font-weight: 600; color: #fff; width: 280px; text-align: center; padding: 18px 0; border-radius: 6px; text-decoration: none; margin: 24px 0; box-shadow: 0 2px 8px rgba(45,194,77,0.12);">
+  Set Your Password & Activate Account
+</a>
 {% endblock button_link %}
-
 
 {% block extra_content %}
 <tr>
-  <td style="text-align:center;padding:25px 75px;font-weight: 300;color:#000000;font-size:37px;">
-    This link will be valid for 2 hours.
+  <td style="text-align:center;padding:20px 60px;font-weight: 400;color:#222;font-size:22px;">
+    This link will be valid for <b>2 hours</b>.
   </td>
 </tr>
 <tr>
-  <td style="text-align:center;padding:25px 75px;font-weight: 300;color:#000000;font-size:30px;">
-    Once your account is activated, you will be able to access all of the features in Bottle CRM
+  <td style="text-align:center;padding:10px 60px;font-weight: 300;color:#444;font-size:18px;">
+    Once your account is activated, you’ll have full access to all features in <b>Bottle CRM</b>.
+  </td>
+</tr>
+<tr>
+  <td style="text-align:center;padding:10px 60px;font-weight: 300;color:#888;font-size:15px;">
+    Didn’t expect this email? You can safely ignore it.
   </td>
 </tr>
 {% endblock extra_content %}
