Add frontend URL to email context and update link in assigned leads template

--- a/templates/assigned_to/leads_assigned.html
+++ b/templates/assigned_to/leads_assigned.html
@@ -25,7 +25,7 @@ A lead has been assigned for you - {{ lead.title }}<br>
 
 {% block button_link %}
 <div style="margin-bottom:20px">
-    <a href="{{url}}"
+    <a href="{{frontend_url}}/app/leads/{{ lead.id }}"
         style="display:inline-block;width:170px;background:#38abdd;padding:10px;text-align:center;color:#fff;font-size:1rem;font-weight:600;margin:0px auto;margin-bottom:20px;border-radius:5px;text-decoration:none;display:block">Click
         Here</a>
 </div>
